--- a/harbor-ingress/ingress/ingressroute.yaml
+++ b/harbor-ingress/ingress/ingressroute.yaml
@@ -10,16 +10,22 @@ spec:
   routes:
   - match: Host(`harbor.k8s.lenin.nu`)
     kind: Rule
+    middlewares:
+    - name: ipwhitelist-privnets
     services:
     - name: harbor-portal
       port: 80
   - match: Host(`harbor.k8s.lenin.nu`) && PathPrefix(`/api/`, `/service/`, `/v2/`, `/chartrepo/`, `/c/`)
     kind: Rule
+    middlewares:
+    - name: ipwhitelist-privnets
     services:
     - name: harbor-core
       port: 80
   - match: Host(`harbor-notary.k8s.lenin.nu`)
     kind: Rule
+    middlewares:
+    - name: ipwhitelist-privnets
     services:
     - name: harbor-notary-server
       port: 4443
