--- a/cert-manager/certificates/self-signed/issuer.yaml
+++ b/cert-manager/certificates/self-signed/issuer.yaml
@@ -18,7 +18,7 @@ spec:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
-      name: staging-privateKeyRef
+      name: letsencrypt-staging
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
     - http01:
