--- a/yopass/yopass/middleware.yaml
+++ b/yopass/yopass/middleware.yaml
@@ -10,7 +10,7 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: yopass-ipwhitelist
+#  name: yopass-ipwhitelist
 spec:
   ipWhiteList:
     sourceRange:
