--- a/webservers/kustomization.yaml
+++ b/webservers/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - middlewares/middleware.yaml
+  - middlewares/middlewares.yaml
   - pravda/deployment.yaml
   - pravda/services.yaml
   - pravda/ingressroute.yaml
