gotta add more opnsense bgps?

--- a/metallb/config/bgppeer.yaml
+++ b/metallb/config/bgppeer.yaml
@@ -1,7 +1,37 @@
 apiVersion: metallb.io/v1beta2
 kind: BGPPeer
 metadata:
-  name: bgppeer-opnsense
+  name: bgppeer-opnsense1
+  namespace: metallb-system
+spec:
+  myASN: 64500
+  peerASN: 65000
+  peerAddress: 192.168.100.2
+  nodeSelectors:
+  - matchExpressions:
+    - key: kubernetes.io/hostname
+      operator: In
+      values: [k8s-worker-01, k8s-worker-02, k8s-worker-03]
+---
+apiVersion: metallb.io/v1beta2
+kind: BGPPeer
+metadata:
+  name: bgppeer-opnsense2
+  namespace: metallb-system
+spec:
+  myASN: 64500
+  peerASN: 65000
+  peerAddress: 192.168.100.3
+  nodeSelectors:
+  - matchExpressions:
+    - key: kubernetes.io/hostname
+      operator: In
+      values: [k8s-worker-01, k8s-worker-02, k8s-worker-03]
+---
+apiVersion: metallb.io/v1beta2
+kind: BGPPeer
+metadata:
+  name: bgppeer-opnsense2
   namespace: metallb-system
 spec:
   myASN: 64500
