--- a/metallb/config/bgppeer.yaml
+++ b/metallb/config/bgppeer.yaml
@@ -31,7 +31,7 @@ spec:
 apiVersion: metallb.io/v1beta2
 kind: BGPPeer
 metadata:
-  name: bgppeer-opnsense2
+  name: bgppeer-opnsense
   namespace: metallb-system
 spec:
   myASN: 64500
