comment out a few more zabbix env

--- a/zabbix-server/zabbix-server/deployment.yaml
+++ b/zabbix-server/zabbix-server/deployment.yaml
@@ -41,25 +41,25 @@ spec:
 #          value: "2048M"
 #        - name: ZBX_HISTORYINDEXCACHESIZE
 #          value: "1024M"
-        - name: ZBX_STARTTRAPPERS
-          value: "5"
-        - name: ZBX_STARTPREPROCESSORS
-          value: "10"
+#        - name: ZBX_STARTTRAPPERS
+#          value: "5"
+#        - name: ZBX_STARTPREPROCESSORS
+#          value: "10"
         - name: ZBX_STARTDBSYNCERS
-          value: "10"
+          value: "4" #Default 4
 #        - name: ZBX_JAVAGATEWAY_ENABLE
 #          value: "true"
 #        - name: ZBX_STARTJAVAPOLLERS
 #          value: "5"
         - name: ZBX_ENABLE_SNMP_TRAPS
           value: "true"
-        - name: ZBX_STARTPROXYPOLLERS
-          value: "10"
+#        - name: ZBX_STARTPROXYPOLLERS
+#          value: "10"
         - name: ZBX_PROXYCONFIGFREQUENCY
           value: "600"              
-        - name: ZBX_STARTHTTPPOLLERS
-          value: "5"
-        - name: ZBX_STARTESCALATORS
-          value: "5"
+#        - name: ZBX_STARTHTTPPOLLERS
+#          value: "5"
+#        - name: ZBX_STARTESCALATORS
+#          value: "5"
       restartPolicy: Always
   revisionHistoryLimit: 1
