--- a/zabbix-server/zabbix-server/deployment.yaml
+++ b/zabbix-server/zabbix-server/deployment.yaml
@@ -31,8 +31,8 @@ spec:
         env:
         - name: PHP_TZ
           value: "Europe/Stockholm"
-        - name: POSTGRES_USE_IMPLICIT_SEARCH_PATH
-          value: "true"
+#        - name: POSTGRES_USE_IMPLICIT_SEARCH_PATH
+#          value: "true"
         - name: ZBX_CACHESIZE
           value: "128M" #default 8M
 #        - name: ZBX_TRENDCACHESIZE
