--- a/zabbix-server/zabbix-server/deployment.yaml
+++ b/zabbix-server/zabbix-server/deployment.yaml
@@ -11,6 +11,16 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: zabbix-server
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: name
+              operator: In
+              values:
+              - k8s-worker-02
+              - k8s-worker-03
     spec:
       containers:
       - name: zabbix-server
