--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: grafana/grafana:10.0.0-preview
+        image: grafana/grafana:10.0.1
         ports:
         - name: grafana
           containerPort: 3000
