--- a/mail/postfixadmin/deployment.yaml
+++ b/mail/postfixadmin/deployment.yaml
@@ -22,10 +22,10 @@ spec:
             containerPort: 80
           resources:
             limits:
-              cpu: "1"
+              cpu: "500m"
               memory: 512M
             requests:
-              cpu: "1"
+              cpu: "500m"
               memory: 512M
           envFrom:
           - secretRef:
