--- a/webservers/pravda/deployment.yaml
+++ b/webservers/pravda/deployment.yaml
@@ -22,10 +22,10 @@ spec:
           readOnly: true
         resources:
           limits:
-            cpu: "100"
+            cpu: "100m"
             memory: 128M
           requests:
-            cpu: "100"
+            cpu: "100m"
             memory: 64M
       volumes:
         - name: html
