test dem spi certs

--- a/webservers/kustomization.yaml
+++ b/webservers/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - pravda/deployment.yaml
   - pravda/services.yaml
   - pravda/ingressroute.yaml
-
+  - pravda/certificate.yaml
 configMapGenerator:
   - name: html-pravda-index
     files:
