--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - service/argocd-rescue2.yaml
   - ingress/argocd-ingress.yaml
   - ingress/middleware.yaml
+  - ingress/certificate.yaml
 patchesStrategicMerge:
   - patch/argocd-cm.yaml
   - patch/argocd-clusterrole.yaml
