--- a/harbor-ingress/ingress/ingressroute.yaml
+++ b/harbor-ingress/ingress/ingressroute.yaml
@@ -6,7 +6,7 @@ spec:
   entryPoints:
     - websecure
   tls:
-    secretName: 
+    secretName: secret-harbor-k8s-lenin-nu
   routes:
   - match: Host(`harbor.k8s.lenin.nu`)
     kind: Rule
@@ -22,6 +22,17 @@ spec:
     services:
     - name: harbor-core
       port: 80
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: harbor-notary-https
+spec:
+  entryPoints:
+    - websecure
+  tls:
+    secretName: cert-harbor-notary-k8s-lenin-nu
+  routes:
   - match: Host(`harbor-notary.k8s.lenin.nu`)
     kind: Rule
     middlewares:
