--- a/grafana/service/ingressroute.yaml
+++ b/grafana/service/ingressroute.yaml
@@ -25,7 +25,7 @@ spec:
   entryPoints:
     - websecure
   tls:
-    secretName: 
+    secretName: secret-grafana-k8s-lenin-nu
   routes:
   - match: Host(`grafana.k8s.lenin.nu`)
     kind: Rule
