add yopass cert

--- a/yopass/yopass/yopass-ingress.yaml
+++ b/yopass/yopass/yopass-ingress.yaml
@@ -26,7 +26,7 @@ spec:
   entryPoints:
     - websecure
   tls:
-    secretName: 
+    secretName: secret-yopass-k8s-lenin-nu
   routes:
   - match: Host(`yopass.k8s.lenin.nu`)
     kind: Rule
