--- a/argocd/ingress/argocd-ingress.yaml
+++ b/argocd/ingress/argocd-ingress.yaml
@@ -26,7 +26,7 @@ spec:
   entryPoints:
     - websecure
   tls:
-    certResolver: secret-argocd-k8s-lenin-nu
+    secretName: secret-argocd-k8s-lenin-nu
   routes:
   - kind: Rule
     middlewares:
