--- a/rook-ceph/service/ingressroute.yaml
+++ b/rook-ceph/service/ingressroute.yaml
@@ -25,7 +25,7 @@ spec:
   entryPoints:
     - websecure
   tls:
-    secretName: 
+    secretName: secret-ceph-k8s-lenin-nu
   routes:
   - match: Host(`ceph.k8s.lenin.nu`)
     kind: Rule
