ffs gotta uncomment stuff

--- a/rook-ceph/base/cluster.yaml
+++ b/rook-ceph/base/cluster.yaml
@@ -67,7 +67,7 @@ spec:
     # serve the dashboard under a subpath (useful when you are accessing the dashboard via a reverse proxy)
     # urlPrefix: /ceph-dashboard
     # serve the dashboard at the given port.
-    # port: 8080
+    port: 8080
     # serve the dashboard using SSL
     ssl: false
   # enable prometheus alerting for cluster
