sort out a zabbix cert

--- a/zabbix-server/zabbix-web/service/ingressroute.yaml
+++ b/zabbix-server/zabbix-web/service/ingressroute.yaml
@@ -23,7 +23,7 @@ spec:
   entryPoints:
     - websecure
   tls:
-    secretName: 
+    secretName: secret-zabbix-k8s-lenin-nu
   routes:
   - match: Host(`zabbix.k8s.lenin.nu`)
     kind: Rule
