--- a/ts3bot/deployment.yaml
+++ b/ts3bot/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: ts3bot
 #        image:  ancieque/ts3audiobot:0.12.0
-        image:  ancieque/ts3audiobot:0.12.0cmdrlenin/ts3audiobot3.1:0.12.0
+        image:  cmdrlenin/ts3audiobot3.1:0.12.0
         volumeMounts:
         - name: ts3-bot-config
           mountPath: /app/data/rights.toml
