--- a/metallb/config/pool.yaml
+++ b/metallb/config/pool.yaml
@@ -55,3 +55,13 @@ spec:
   addresses:
   - 192.168.201.22/32
   autoAssign: false
+---
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
+  name: pool07-zabbixproxy-bgp
+  namespace: metallb-system
+spec:
+  addresses:
+  - 192.168.201.23/32
+  autoAssign: false
