--- a/zabbix-server/kustomization.yaml
+++ b/zabbix-server/kustomization.yaml
@@ -9,5 +9,6 @@ resources:
  - zabbix-web/service/service.yaml
  - zabbix-web/service/ingressroute.yaml
  - zabbix-web/service/certificate.yaml
+ - proxyservice.yaml
 generatorOptions:
   disableNameSuffixHash: true
