--- a/zabbix-server/proxyservice.yaml
+++ b/zabbix-server/proxyservice.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zabbix-proxy-svc
+  name: zabbix-proxy-en
   namespace: zabbix
   annotations:
     metallb.universe.tf/address-pool: pool07-zabbixproxy-bgp
 spec:
   type: ExternalName
   externalName: zabbix-proxy.zabbix-agent
-  loadBalancerIP: 192.168.201.23
+  externalIP: 192.168.201.23
   ports:
     - name: zabbix
       port: 10050
