does this work..

--- a/monitoring/zabbix_values.yaml
+++ b/monitoring/zabbix_values.yaml
@@ -92,7 +92,8 @@ zabbixProxy:
     ## Loadbalancer IP
     ## Only use if service.type is "LoadBalancer"
     ##
-    externalTrafficPolicy: Local
+    spec: 
+      externalTrafficPolicy: Local
     loadBalancerIP: 192.168.201.23
     loadBalancerSourceRanges: []
 
