--- a/zabbix-server/kustomization.yaml
+++ b/zabbix-server/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: zabbix-server
+namespace: zabbix
 resources:
  - ingress/middleware.yaml
  - zabbix-server/deployment.yaml
