--- a/yopass/yopass/certificate.yaml
+++ b/yopass/yopass/certificate.yaml
@@ -11,3 +11,17 @@ spec:
     kind: ClusterIssuer
   privateKey:
     rotationPolicy: Always
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata: 
+  name: cert-verysecurepassword-databra007-se
+spec:
+  dnsNames:
+    - "verysecurepassword.databra007.se"
+  secretName: secret--verysecurepassword-databra007-se
+  issuerRef:
+    name: letsencrypt-prod
+    kind: ClusterIssuer
+  privateKey:
+    rotationPolicy: Always
