adjust values for new traefik version

--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -6,7 +6,8 @@ service:
 ports:
   websecure:
     port: 8443
-    expose: true
+    expose: 
+      default: true
     exposedPort: 443
     protocol: TCP
     http3:
