--- a/argocd/ingress/argocd-ingress.yaml
+++ b/argocd/ingress/argocd-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: argocd-http
@@ -17,7 +17,7 @@ spec:
       port: 80
       namespace: argocd
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: argocd-https
