--- a/harbor-ingress/ingress/ingressroute.yaml
+++ b/harbor-ingress/ingress/ingressroute.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: harbor-https
@@ -23,7 +23,7 @@ spec:
     - name: harbor-core
       port: 80
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: harbor-notary-https
