--- a/mail/postfixadmin/ingressroute.yaml
+++ b/mail/postfixadmin/ingressroute.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: postfixadmin-http
@@ -15,7 +15,7 @@ spec:
     - name: postfixadmin-svc
       port: 80
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: postfixadmin-https
