--- a/prometheus/service/ingressroute.yaml
+++ b/prometheus/service/ingressroute.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: prometheus-short-http
@@ -17,7 +17,7 @@ spec:
       port: 9090
       namespace: tools
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: prometheus-short-https
@@ -37,7 +37,7 @@ spec:
       port: 9090
       namespace: tools
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: prometheus-http
@@ -56,7 +56,7 @@ spec:
       port: 9090
       namespace: tools
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: prometheus-https
