--- a/zabbix-server/zabbix-web/service/ingressroute.yaml
+++ b/zabbix-server/zabbix-web/service/ingressroute.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: zabix-web-https
+  name: zabbix-web-https
 spec:
   entryPoints:
     - websecure
