change api for all traefik middlewares

--- a/yopass/yopass/middleware.yaml
+++ b/yopass/yopass/middleware.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: httpsredirect
@@ -7,7 +7,7 @@ spec:
   redirectScheme:
     scheme: https
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: yopass-ipwhitelist
