--- a/zabbix-server/ingress/middleware.yaml
+++ b/zabbix-server/ingress/middleware.yaml
@@ -12,7 +12,7 @@ kind: Middleware
 metadata:
   name: ipwhitelist-privnets
 spec:
-  IPAllowList:
+  ipWhiteList:
     sourceRange:
       - 192.168.0.0/16
       - 10.0.0.0/8
