--- a/zabbix-server/zabbix-web/service/ingressroute.yaml
+++ b/zabbix-server/zabbix-web/service/ingressroute.yaml
@@ -10,7 +10,7 @@ spec:
     kind: Rule
     middlewares:
     - name: httpsredirect
-    - name: ipwhitelist-privnets
+    - name: ipallowlist-privnets
     services:
     - name: zabbix-web-svc
       port: 80
@@ -28,7 +28,7 @@ spec:
   - match: Host(`zabbix.k8s.lenin.nu`)
     kind: Rule
     middlewares:
-    - name: ipwhitelist-privnets
+    - name: ipallowlist-privnets
     services:
     - name: zabbix-web-svc
       port: 80
