--- a/harbor-ingress/ingress/ingressroute.yaml
+++ b/harbor-ingress/ingress/ingressroute.yaml
@@ -50,21 +50,21 @@ spec:
     services:
     - name: harbor-core
       port: 80
----
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: harbor-notary-https
-spec:
-  entryPoints:
-    - websecure
-  tls:
-    secretName: secret-harbor-notary-k8s-lenin-nu
-  routes:
-  - match: Host(`harbor-notary.k8s.lenin.nu`)
-    kind: Rule
-    middlewares:
-    - name: ipwhitelist-privnets
-    services:
-    - name: harbor-notary-server
-      port: 4443
+#---
+#apiVersion: traefik.io/v1alpha1
+#kind: IngressRoute
+#metadata:
+#  name: harbor-notary-https
+#spec:
+#  entryPoints:
+#    - websecure
+#  tls:
+#    secretName: secret-harbor-notary-k8s-lenin-nu
+#  routes:
+#  - match: Host(`harbor-notary.k8s.lenin.nu`)
+#    kind: Rule
+#    middlewares:
+#    - name: ipwhitelist-privnets
+#    services:
+#    - name: harbor-notary-server
+#      port: 4443
