--- a/argocd/ingress/middleware.yaml
+++ b/argocd/ingress/middleware.yaml
@@ -17,3 +17,14 @@ spec:
       - 192.168.0.0/16
       - 10.0.0.0/8
       - 172.16.0.0/12
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: ipallowlist-privnets
+spec:
+  ipAllowList:
+    sourceRange:
+      - 192.168.0.0/16
+      - 10.0.0.0/8
+      - 172.16.0.0/12
