--- a/prometheus/service/ingressroute.yaml
+++ b/prometheus/service/ingressroute.yaml
@@ -11,7 +11,7 @@ spec:
     kind: Rule
     middlewares:
     - name: httpsredirect
-    - name: ipwhitelist-privnets
+    - name: ipallowlist-privnets
     services:
     - name: prometheus-shortterm-svc
       port: 9090
@@ -31,7 +31,7 @@ spec:
   - match: Host(`prometheus-short.k8s.lenin.nu`)
     kind: Rule
     middlewares:
-    - name: ipwhitelist-privnets
+    - name: ipallowlist-privnets
     services:
     - name: prometheus-shortterm-svc
       port: 9090
@@ -50,7 +50,7 @@ spec:
     kind: Rule
     middlewares:
     - name: httpsredirect
-    - name: ipwhitelist-privnets
+    - name: ipallowlist-privnets
     services:
     - name: prometheus-svc
       port: 9090
@@ -70,7 +70,7 @@ spec:
   - match: Host(`prometheus.k8s.lenin.nu`)
     kind: Rule
     middlewares:
-    - name: ipwhitelist-privnets
+    - name: ipallowlist-privnets
     services:
     - name: prometheus-svc
       port: 9090
