--- a/webservers/middlewares/middlewares.yaml
+++ b/webservers/middlewares/middlewares.yaml
@@ -9,9 +9,9 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: ipwhitelist-privnets
+  name: ipallowlist-privnets
 spec:
-  ipWhiteList:
+  ipAllowList:
     sourceRange:
       - 192.168.0.0/16
       - 10.0.0.0/8
