--- a/yopass/yopass/middleware.yaml
+++ b/yopass/yopass/middleware.yaml
@@ -10,8 +10,10 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: yopass-ipwhitelist
+  name: ipallowlist-privnets
 spec:
-  ipWhiteList:
+  ipAllowList:
     sourceRange:
-      - 192.168.0.0/24
+      - 192.168.0.0/16
+      - 10.0.0.0/8
+      - 172.16.0.0/12
